[gd_scene load_steps=21 format=3 uid="uid://baxeutytpeu4r"]

[ext_resource type="Script" path="res://player.gd" id="1_fu8mh"]
[ext_resource type="Texture2D" uid="uid://b0420tlm66epn" path="res://walk_1.png" id="2_dplf0"]
[ext_resource type="Texture2D" uid="uid://bk5ust3c5s1yi" path="res://walk_2.png" id="3_ayubm"]
[ext_resource type="Texture2D" uid="uid://bai2oht78xhik" path="res://punch_1.png" id="4_oca4s"]
[ext_resource type="Texture2D" uid="uid://by7lv6bdpsga7" path="res://walk_3.png" id="4_yerl7"]
[ext_resource type="Texture2D" uid="uid://byrlvbdaq4g8x" path="res://punch_2.png" id="5_2ipgk"]
[ext_resource type="Texture2D" uid="uid://d3gnk01g8u43g" path="res://walk_4.png" id="5_ndenl"]
[ext_resource type="Texture2D" uid="uid://bpwiiebprm3ux" path="res://punch_3.png" id="6_e3247"]
[ext_resource type="Texture2D" uid="uid://d0f2lu287eyio" path="res://walk_5.png" id="6_kyghu"]
[ext_resource type="Texture2D" uid="uid://b8g6s5i5exnqk" path="res://walk_6.png" id="7_6j7cf"]
[ext_resource type="Texture2D" uid="uid://coqi1qvf7t3ft" path="res://punch_4.png" id="7_iddv3"]
[ext_resource type="Texture2D" uid="uid://dfrxi1wf7g6nq" path="res://punch_5.png" id="8_1k3vc"]
[ext_resource type="Texture2D" uid="uid://dtmpinpvpifs0" path="res://punch_7.png" id="9_x5opq"]
[ext_resource type="Texture2D" uid="uid://d25mk1aswflq6" path="res://punch_6.png" id="10_swyn0"]
[ext_resource type="Texture2D" uid="uid://1875wg7q1pvk" path="res://punch_8.png" id="11_i30lp"]
[ext_resource type="Texture2D" uid="uid://bk8edsh7iqx3h" path="res://punch_10.png" id="12_a8pkv"]
[ext_resource type="Texture2D" uid="uid://bf2vltc3o3ka4" path="res://punch_9.png" id="13_gq1bu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_edxb0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dplf0")
}, {
"duration": 1.0,
"texture": ExtResource("3_ayubm")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_oca4s")
}, {
"duration": 1.0,
"texture": ExtResource("5_2ipgk")
}, {
"duration": 1.0,
"texture": ExtResource("6_e3247")
}, {
"duration": 1.0,
"texture": ExtResource("7_iddv3")
}, {
"duration": 1.0,
"texture": ExtResource("8_1k3vc")
}, {
"duration": 1.0,
"texture": ExtResource("9_x5opq")
}, {
"duration": 1.0,
"texture": ExtResource("10_swyn0")
}, {
"duration": 1.0,
"texture": ExtResource("11_i30lp")
}, {
"duration": 1.0,
"texture": ExtResource("12_a8pkv")
}, {
"duration": 1.0,
"texture": ExtResource("13_gq1bu")
}],
"loop": true,
"name": &"punching",
"speed": 30.0
}, {
"frames": [],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dplf0")
}, {
"duration": 1.0,
"texture": ExtResource("3_ayubm")
}, {
"duration": 1.0,
"texture": ExtResource("4_yerl7")
}, {
"duration": 1.0,
"texture": ExtResource("5_ndenl")
}, {
"duration": 1.0,
"texture": ExtResource("6_kyghu")
}, {
"duration": 1.0,
"texture": ExtResource("7_6j7cf")
}],
"loop": true,
"name": &"walking",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_56n1y"]
size = Vector2(40, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tge7h"]
size = Vector2(40, 40)

[node name="Player" type="CharacterBody2D"]
position = Vector2(20, -20)
script = ExtResource("1_fu8mh")
metadata/_edit_group_ = true

[node name="PlayerBody" type="ColorRect" parent="."]
visible = false
offset_left = -20.0
offset_top = -82.0
offset_right = 20.0
offset_bottom = 20.0

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_edxb0")
animation = &"punching"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_56n1y")

[node name="PunchHitBox" type="Area2D" parent="."]
metadata/_edit_group_ = true

[node name="PunchRect" type="ColorRect" parent="PunchHitBox"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(1, 1, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PunchHitBox"]
shape = SubResource("RectangleShape2D_tge7h")

[node name="Camera2D" type="Camera2D" parent="."]
