[gd_scene load_steps=5 format=3 uid="uid://baxeutytpeu4r"]

[ext_resource type="Script" path="res://scripts/entities/player.gd" id="1_476ii"]
[ext_resource type="SpriteFrames" uid="uid://byyxngdgsmnn2" path="res://assets/animations/player_animations.tres" id="2_uruin"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_56n1y"]
size = Vector2(40, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tge7h"]
size = Vector2(40, 39)

[node name="Player" type="CharacterBody2D"]
position = Vector2(20, -20)
script = ExtResource("1_476ii")
metadata/_edit_group_ = true

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-19, -21)
sprite_frames = ExtResource("2_uruin")
animation = &"heavy_punch"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_56n1y")

[node name="PunchHitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
metadata/_edit_group_ = true

[node name="PunchRect" type="ColorRect" parent="PunchHitBox"]
visible = false
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(1, 1, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PunchHitBox"]
shape = SubResource("RectangleShape2D_tge7h")

[node name="HeavyPunchHitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
metadata/_edit_group_ = true

[node name="HeavyPunchRect" type="ColorRect" parent="HeavyPunchHitBox"]
visible = false
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
color = Color(1, 0.5, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeavyPunchHitBox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_tge7h")

[node name="KickHitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
metadata/_edit_group_ = true

[node name="KickRect" type="ColorRect" parent="KickHitBox"]
visible = false
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(1, 1, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KickHitBox"]
shape = SubResource("RectangleShape2D_tge7h")

[node name="DashHitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitoring = false
monitorable = false
metadata/_edit_group_ = true

[node name="DashRect" type="ColorRect" parent="DashHitBox"]
visible = false
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0, 1, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashHitBox"]
shape = SubResource("RectangleShape2D_tge7h")

[node name="Camera2D" type="Camera2D" parent="."]
